Sunrise and Sunset Service and Refactoring
- introduced API Bundle
- Moved DWDUtils and Fetcher to the API
- Implemented Time4J Sunrise and Sunset data
- modified model for that
- adjusted Station test to use local data

Signed-off-by: Mark Hoffmann <m.hoffmann@data-in-motion.biz>