@@ -11,7 +11,7 @@
  * Contributors:
  *     Data In Motion - initial API and implementation
  */
-package org.gecko.weather.dwd.fc.fetcher;
+package org.gecko.weather.api.fetcher;
 
 import static java.util.Objects.requireNonNull;
 
@@ -20,9 +20,11 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.System.Logger;
 import java.lang.System.Logger.Level;
+import java.net.URI;
 import java.net.URL;
+import java.nio.file.Paths;
 
-import org.gecko.weather.dwd.fc.util.DWDUtils;
+import org.gecko.weather.api.util.DWDUtils;
 
 /**
  * Abstract class for fetching and loading DWD. It also supports unzipping
@@ -48,13 +50,26 @@ public abstract class DWDFetcher {
 	 * @return an identifier
 	 */
 	protected abstract String getName();
-
+	
 	public InputStream doDownload() throws IOException	 {
 		String urlString = getFetchUrl();
 		long start = System.currentTimeMillis();
 		try {
 			LOGGER.log(Level.INFO, "{0} Downloading from URL: {1}", getName(), urlString);
-			URL url = new URL(urlString);
+			URI uri = URI.create(urlString);
+			URL url;
+			LOGGER.log(Level.INFO, "Base dir Project dir {0}", System.getProperty("baseDir"));
+			LOGGER.log(Level.INFO, "Base path Project dir {0}", System.getProperty("basePath"));
+			if (uri.isAbsolute()) {
+				LOGGER.log(Level.INFO, "Absolute URI {0}", uri);
+				url = uri.toURL();
+			} else {
+				String path = System.getProperty("baseDir", "");
+				URI current = Paths.get(path).toAbsolutePath().toUri();
+				LOGGER.log(Level.INFO, "Current relative URI {0}, given URI is: {1}", current, uri);
+				url = current.resolve(uri).toURL();
+			}
+			LOGGER.log(Level.INFO, "URL is {0}", url);
 			return new BufferedInputStream(url.openStream());
 		} finally {
 			LOGGER.log(Level.INFO, "{0} Downloading file {1}", getName(), (System.currentTimeMillis() - start));
